--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "cryptr": "^6.0.2",
     "debug": "~2.6.9",
+    "deepai": "^1.0.17",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
