--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cryptr": "^6.0.2",
     "debug": "~2.6.9",
     "deepai": "^1.0.17",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
