--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
   },
   "dependencies": {
     "alert": "^5.0.10",
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.4.4",
-    "cryptr": "^6.0.2",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
@@ -19,7 +16,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^7.3.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.13.0",
+    "node-gyp": "^3.8.0",
     "node-sass-middleware": "0.11.0",
     "nodemailer": "^6.5.0",
     "popups": "^1.1.3",
